# protocolgate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: RELEASE_v0.1.0.md
.github/workflows/: protocolgate.yml  publish-release.yml
action/: action.yml
docs/: BOUNTY_FACTORY.md  BOUNTY_FACTORY_BLUEPRINT.md  BOUNTY_SCOPE_GATE.md  COMPOSED_GRAPH_BOUNTY_MODE.md  CONTROL_PLANE_REVIEW_OFFER.md  INVARIANT_HUNTER.md  KILLER_DEMO_SCRIPT.md  PROPOSAL_INTENT_GATE.md  PROTOCOLGATE_REVENUE_OS_MCP.md  SAMPLE_CONTROL_PLANE_REPORT.md
examples/: bounty-candidate.sample.md  bounty-scope.sample.md  live-state.drift.json  protocolgate.aave-grace-bypass.yaml  protocolgate.invalid.yaml  protocolgate.proposal-intent.yaml  protocolgate.valid.yaml
examples/bounty-factory/: README.md  targets.example.yaml
examples/foundry-script/: Deploy.s.sol
examples/public/aave-governance-v3-ethereum/: SOURCE_NOTES.md  protocolgate.yaml
examples/public/compound-comet-usdc/: SOURCE_NOTES.md  protocolgate.yaml
examples/public/dre-labs-dreusd/: README.md  protocolgate.dreusd.yaml  run_demo.sh
examples/public/lido-core-mainnet/: SOURCE_NOTES.md  protocolgate.yaml
policies/: catalog.md
policies/protocolgate/: access.rego  core.rego  proposal_intent.rego  protocol.rego
schema/: protocolgate.schema.json
src/protocolgate/: __init__.py  bounty_scope.py  bounty_sim.py  capsules.py  cli.py  collector.py  drift.py  economics.py  factory.py  forkpoc.py  historical_db.py  hunt.py  invariant_miner.py  manifest.py  mcp_server.py  memory.py  opa.py  reasoning.py  report.py  revenue.py  router.py  rules.py  rules_access.py  rules_hunt.py  rules_proposal_intent.py  rules_protocol.py  rules_support.py  trigger.py  webhook.py
src/protocolgate/connectors/: __init__.py  solodit.py
tests/: test_bounty_scope.py  test_capsules.py  test_cli.py  test_collector.py  test_economics.py  test_factory.py  test_forkpoc.py  test_historical_db.py  test_invariant_miner.py  test_malformed_manifest.py  test_memory.py  test_public_fixtures.py  test_reasoning.py  test_revenue.py  test_router.py  test_rules.py  test_solodit.py  test_trigger.py  test_webhook.py
