[project]
name = "protocolgate-devsecops"
version = "0.1.0"
description = "Web3 control-plane policy gate for smart-contract deployment topology."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "ProtocolGate contributors" }
]
keywords = [
  "solidity",
  "smart-contracts",
  "web3",
  "devsecops",
  "control-plane",
  "multisig",
  "timelock",
  "opa",
  "rego",
  "foundry",
  "security"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "mcp>=1.13.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "typer>=0.15.1"
]

[project.scripts]
protocolgate = "protocolgate.cli:app"
protocolgate-mcp = "protocolgate.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocolgate"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "protocolgate/policies"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/action",
  "/docs/CONTROL_PLANE_REVIEW_OFFER.md",
  "/docs/INVARIANT_HUNTER.md",
  "/docs/KILLER_DEMO_SCRIPT.md",
  "/docs/PROPOSAL_INTENT_GATE.md",
  "/docs/PROTOCOLGATE_REVENUE_OS_MCP.md",
  "/docs/SAMPLE_CONTROL_PLANE_REPORT.md",
  "/examples",
  "/policies",
  "/schema",
  "/src",
  "/tests",
  "/pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
